--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Яндекс еда</title>
 </head>
+
 <body>
-    
+    <div>
+        Helloy
+    </div>
+
 </body>
+
 </html>
