--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 
 <body>
-    <div>
-        Helloy
-    </div>
+    <header class="header container">
+        Header
+    </header>
 
+    <main class="main container">
+        <section class="section">
+            section1
+        </section>
+
+        <section class="section">
+            section2
+        </section>
+
+    </main>
 </body>
 
 </html>
