--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
 <body>
     <header class="header container">
-        Header
+        <div class="label">
+            <img
+                class="logo" 
+                src="./images/Logo.png" 
+                alt="logo"   
+            >
+
+            <button type="button" class="label-button">
+                Задать вопрос
+            </button>
+
+        </div>
     </header>
 
     <main class="main container">
