--- a/index.html
+++ b/index.html
@@ -22,15 +22,31 @@
             </button>
 
         </div>
+
+        <h1 class=" title header-title">Станьте курьером</h1>
+
+        <h2 class="subtitle header-subtitle">
+            и зарабатывайте
+            <br>
+            до <strong>130 000 ₽</strong> в месяц
+        </h2>
+
+        <button type="button" class="header-button">Стать курьером</button>
+
+        <p class="text-header">
+            выход на доставку в первый день регистрации
+            <br>
+            и моментальные выплаты *
+        </p>
     </header>
 
     <main class="main container">
         <section class="section">
-            section1
+            
         </section>
 
         <section class="section">
-            section2
+            
         </section>
 
     </main>
