--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
 
         </div>
 
-        <h1 class=" title header-title">Станьте курьером</h1>
+        <h1 class="title">Станьте курьером</h1>
 
-        <h2 class="subtitle header-subtitle">
+        <h2 class="subtitle">
             и зарабатывайте
             <br>
-            до <strong>130 000 ₽</strong> в месяц
+            до <span>130 000 ₽</span> в месяц
         </h2>
 
-        <button type="button" class="header-button">Стать курьером</button>
+        <button type="button" class="courier-button">
+            Стать курьером
+        </button>
 
-        <p class="text-header">
+        <div class="delivery">
             выход на доставку в первый день регистрации
             <br>
             и моментальные выплаты *
-        </p>
+        </div>
     </header>
 
     <main class="main container">
