--- a/index.html
+++ b/index.html
@@ -43,7 +43,37 @@
     </header>
 
     <main class="main container">
-        <section class="section">
+        <section class="advantages">
+            <h1 class="title">Почему у нас хорошо</h1>
+            <div class="advantages-content">
+                <div class="advantages-block">
+                    <div class="advantages-title">
+                        Высокий заработок
+                    </div>
+                    
+                    <div class="advantages-text">
+                        Достойные выплаты ежедневно
+                    </div>
+                </div>
+                <div class="advantages-block">
+                    <div class="advantages-title">
+                        Скидки в Яндекс.Еде
+                    </div>
+
+                    <div class="advantages-text">
+                        Корпоративная скидка на заказ от любой суммы
+                    </div>
+                </div>
+                <div class="advantages-block">
+                    <div class="advantages-title">
+                        Фирменная одежда
+                    </div>
+
+                    <span class="advantages-text">
+                        Предоставляется каждому курьеру бесплатно
+                    </span>
+                </div>
+            </div>
             
         </section>
 
