--- a/index.html
+++ b/index.html
@@ -98,8 +98,75 @@
             
         </section>
 
-        <section class="section">
-            
+        <section class="couriers">
+            <h1 class="title">Уже стали курьерами</h1>
+
+            <div class="slider">
+
+                <div class="slider-content">
+
+                    <div class="slider-block">
+                        <img 
+                            src="./images/courier-1.jpg" 
+                            alt="courier-1" 
+                            class="slider-images"
+                        >
+
+                        <div class="slider-text-wriper">
+                            <div class="slider-title">
+                                Антон, работает 3 года
+                            </div>
+
+                            <div class="slider-text">
+                                «Я доволен, что подключился к Яндекс Еде, — катаюсьпо городу и посещаю красивые места. Расписание удобное, выплаты ежедневные, а поддержка приятная —всегда помогают»
+                            </div>
+                        </div>
+                    </div> 
+
+                    <div class="slider-block">
+                        <img 
+                            src="./images/courier-2.jpg" 
+                            alt="courier-2" 
+                            class="slider-images"
+                        >
+
+                        <div class="slider-text-wriper">
+                            <div class="slider-title">
+                                Вячеслав, зарабатывает 100 000₽ в месяц
+                            </div>
+
+                            <div class="slider-text">
+                                «Физическая активность, прозрачные выплатыи никакого начальника —с сервисом Яндекс Еда я сама выбираю, когда доставлять заказы. Отдельно радует общность курьеров и возможность круто увеличить доходы зимой»
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="slider-block">
+                        <img 
+                            src="./images/courier-3.jpg" 
+                            alt="courier-3" 
+                            class="slider-images"
+                        >
+
+                        <div class="slider-text-wriper">
+                            <div class="slider-title">
+                                Анна, совмещает работу и учебу
+                            </div>
+
+                            <div class="slider-text">
+                                «Благодаря сервису Яндекс Еда мне хватает и времени для учёбы, и доходов для её оплаты. Ещё очень нравится ощущение безопасности —во время доставок мы застрахованы от травм»
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slider-pagination">
+                    <div class="slider-bullet"></div>
+                    <div class="slider-bullet"></div>
+                    <div class="slider-bullet"></div>
+                </div>
+
+            </div>
         </section>
 
     </main>
